<resources>
    <string name="app_name">Journal_App</string>
    <string name="title_text">Self Gratitude Journal</string>
    <string name="grateful_text">What are you grateful for?</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="create_account">Create Account</string>
    <string name="or">Or</string>
    <string name="username_hint">Username</string>
    <string name="title">Title</string>
    <string name="your_thoughts">Your Thoughts</string>
    <string name="save_text">Save</string>
    <string name="hint_text">Title</string>
    <string name="hint_thoughts">Thougts</string>
    <string name="menu">Add Thoughts</string>
    <string name="no_thoughts_hint">Write a journal entry by clicking + icon</string>
</resources>